:bug: slim scrollbars in detailed tweet as well
fixes #100

--- a/src/css/features/slim_scrollbars.css
+++ b/src/css/features/slim_scrollbars.css
@@ -1,5 +1,6 @@
 .btd__slim_scrollbars {
-  .js-column-scroller.scroll-styled-v::-webkit-scrollbar {
+  .js-column-scroller.scroll-styled-v::-webkit-scrollbar,
+  .js-dropdown-container.scroll-styled-v::-webkit-scrollbar {
     width: 3px;
   }
 
